# terrascout

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: control_benchmark.py  end_to_end_benchmark.py  localization_benchmark.py  planner_benchmark.py  resource_scheduler_benchmark.py  run_benchmark.py  scheduler_benchmark.py  slam_benchmark.py  stress_benchmark.py  tracking_benchmark.py
docs/: PROJECT_ONE_PAGER.md  render_milestone_demos.py  render_project_one_pager_pdf.py  update_readme_kpis.py
docs/design/: README.md  l0_pid_control.md  l1_kalman_tracking.md  l2_mcl_localization.md  l3_ekf_slam.md  l4_hybrid_astar.md  l5_mdp_scheduler.md  render_design_pdfs.py
scenarios/: clear_slam_orchard.json  default_orchard.json
terrascout/: __init__.py
terrascout/control/: __init__.py  pid.py
terrascout/eval/: __init__.py  benchmarks.py
terrascout/localize/: __init__.py  particle.py
terrascout/mapping/: __init__.py  ekf_slam.py  landmarks.py  trunks.py
terrascout/plan/: __init__.py  astar.py  hybrid_astar.py
terrascout/runner/: __init__.py  mission.py  reproduce.py
terrascout/safety/: __init__.py  collision_guard.py
terrascout/scheduler/: __init__.py  value_iteration.py
terrascout/sim/: __init__.py  battery.py  geometry.py  (+4 more)
tests/: test_battery.py  test_control.py  test_ekf_slam.py  test_hybrid_planner.py  test_localize.py  test_mapping.py  test_mission.py  test_planner.py  test_reproduce.py  test_safety.py  test_scenario.py  test_scheduler.py  test_sensors.py  test_tracking.py  test_viz.py
(+3 files in other folders)
